--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('/Users/kakao/StudioProjects/maskfinder/keystore/maskfinder')
+            storePassword var
+            keyAlias = var1
+            keyPassword var2
+        }
+    }
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
 
@@ -25,6 +33,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
@@ -52,8 +61,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
-    implementation("com.squareup.okhttp3:okhttp:4.1.0")
-    implementation("com.squareup.okhttp3:logging-interceptor:4.1.0")
+    implementation('com.squareup.okhttp3:okhttp:4.4.0')
+    implementation('com.squareup.okhttp3:logging-interceptor:4.4.0')
 
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
@@ -62,7 +71,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.2.2"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
