--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    var = '#a73047911'
+    var1 = 'ravypark'
+    var2 = '#a73047911'
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     ext.kotlin_version = '1.3.70'
